2005-02-28  Bruno coudoin  <bruno.coudoin@free.fr>

	Improved support for mimetype.
	Now it's possible to provide a signle .xml file by mimetype definition.
	Add icons from the gnome stock default icons.
	At least, extension are added on save.
	
	* boards/gcompris/Makefile.am:
	* boards/gcompris/mime_type.xml.in:
	* boards/gcompris/mimetypes/.cvsignore:
	* boards/gcompris/mimetypes/Makefile.am:
	* boards/gcompris/mimetypes/README:
	* boards/gcompris/mimetypes/icons/.cvsignore:
	* boards/gcompris/mimetypes/icons/gcompris+anim.png:
	* boards/gcompris/mimetypes/icons/gcompris+draw.png:
	* boards/gcompris/mimetypes/icons/gcompris.png:
	* boards/gcompris/mimetypes/icons/svg+xml+javascript.png:
	* boards/gcompris/mimetypes/icons/svg+xml.png:
	* boards/gcompris/mimetypes/mime_type.xml.in:
	* configure.in:
	* src/boards/python/anim.py:
	* src/gcompris/file_selector.c: (display_file_selector),
	(item_event_file_selector), (parseMime),
	(gcompris_load_mime_types):
	* src/gcompris/gameutil.h:
	* src/gcompris/gcompris.c: (setup_window):

2005-02-24  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/read_colors/read_colors_background.png: Cleaned up by Karl Ove Hufthammer
	* boards/read_colors/read_colors_highlight.png: -
	* src/gcompris/file_selector.c: (display_files),
	(item_event_scroll): Yves found the bug. Now the scrollbar works as expected with the wheel
	* src/gcompris/images_selector.c: (gcompris_images_selector_start),
	(item_event_scroll): -


	*** RELEASE 6.5PRE2 ***
	
2005-02-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/anim/animation.js: updated by Yves
	* src/boards/python/anim.py:

2005-02-16  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/gcompris/Makefile.am: fixed, was not putting the file in the correct place
	* src/gcompris/gameutil.c: (gcompris_get_menulist): more robust boards xml parsing

2005-02-16  Bruno coudoin  <bruno.coudoin@free.fr>

	Yves improved anim again
	Bruno started the mime type system

	* boards/Makefile.am: