@@ -1,6 +1,6 @@
 /* gcompris - images_selector.c
  *
- * Time-stamp: <2005/02/24 21:42:27 bruno>
+ * Time-stamp: <2005/03/01 00:27:18 bruno>
  *
  * Copyright (C) 2000 Bruno Coudoin
  *
@@ -188,7 +188,7 @@ void gcompris_images_selector_start (GcomprisBoard *gcomprisBoard, gchar *datase
   gnome_canvas_set_center_scroll_region (GNOME_CANVAS (canvas_list_selector), FALSE);
 
   /* Set the scrollwheel event */
-  gtk_signal_connect(GNOME_CANVAS(canvas_list_selector), "event",
+  gtk_signal_connect(GTK_OBJECT(canvas_list_selector), "event",
 		     (GtkSignalFunc) item_event_scroll,
 		     GNOME_CANVAS(canvas_list_selector));
 
@@ -234,7 +234,7 @@ void gcompris_images_selector_start (GcomprisBoard *gcomprisBoard, gchar *datase
   gnome_canvas_set_center_scroll_region (GNOME_CANVAS (canvas_image_selector), FALSE);
 
   /* Set the scrollwheel event */
-  gtk_signal_connect(GNOME_CANVAS(canvas_image_selector), "event",
+  gtk_signal_connect(GTK_OBJECT(canvas_image_selector), "event",
 		     (GtkSignalFunc) item_event_scroll,
 		     GNOME_CANVAS(canvas_image_selector));
 
