@@ -1,3 +1,9 @@
+2005-03-01  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	Yves has added a dialog in case the images are not found on reload
+	
+	* src/boards/python/anim.py:
+
 2005-02-28  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Improved support for mimetype.
